--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,14 +16,12 @@ aarch64_linux_test_task:
   name: test ($TARGET)
   env:
     TARGET: aarch64-unknown-linux-gnu
-    RUSTDOCFLAGS: -D warnings --cfg weak_memory
-    RUSTFLAGS: -D warnings --cfg weak_memory
   arm_container:
     image: rust:latest
   setup_script:
     - set -ex
     - lscpu
-    - rustup toolchain add nightly --no-self-update --component rust-src && rustup default nightly
+    - rustup toolchain add nightly --no-self-update && rustup default nightly
   test_script:
     - set -ex
     - ./tools/test.sh -vv
@@ -39,33 +37,30 @@ armhf_linux_test_task:
   name: test ($TARGET)
   env:
     TARGET: armv7-unknown-linux-gnueabihf
-    RUSTDOCFLAGS: -D warnings --cfg weak_memory
-    RUSTFLAGS: -D warnings --cfg weak_memory
   arm_container:
     image: rust:latest
   setup_script:
     - set -ex
     - lscpu
-    - rustup toolchain add nightly --no-self-update --component rust-src && rustup default nightly
+    - rustup toolchain add nightly --no-self-update && rustup default nightly
     - dpkg --add-architecture armhf
     - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends gcc-arm-linux-gnueabihf libc6-dev-armhf-cross libc6:armhf
   test_script:
     - set -ex
     - export CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc
     - ./tools/test.sh --target "$TARGET" -Z doctest-xcompile -vv
+    - RUSTFLAGS="$RUSTFLAGS -C target-feature=+v8" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+v8" ./tools/test.sh -Z build-std --target "$TARGET" -vv
 
 aarch64_macos_test_task:
   name: test ($TARGET)
   env:
     TARGET: aarch64-apple-darwin
-    RUSTDOCFLAGS: -D warnings --cfg weak_memory
-    RUSTFLAGS: -D warnings --cfg weak_memory
   macos_instance:
     image: ghcr.io/cirruslabs/macos-ventura-xcode:latest
   setup_script:
     - set -ex
     - sysctl hw.optional machdep.cpu
-    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly --component rust-src
+    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly
   test_script:
     - . $HOME/.cargo/env
     - set -ex
@@ -75,24 +70,20 @@ aarch64_macos_test_task:
 aarch64_linux_valgrind_task:
   name: valgrind ($TARGET)
   env:
-    CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUNNER: valgrind -v --error-exitcode=1 --error-limit=no --leak-check=full --show-leak-kinds=all --track-origins=yes
-    RUSTDOCFLAGS: -D warnings --cfg valgrind
-    RUSTFLAGS: -D warnings --cfg valgrind
     TARGET: aarch64-unknown-linux-gnu
+    VALGRIND: valgrind
   arm_container:
     # Valgrind support ldxp/stxp on 3.19+: https://valgrind.org/docs/manual/dist.news.html
     # However, current Debian stable's Valgrind is 3.16: https://packages.debian.org/en/stable/valgrind
     image: debian:bookworm
   setup_script:
     - set -ex
-    - lscpu
-    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends valgrind ca-certificates curl gcc git libc6-dev
-    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly --component rust-src
+    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends ca-certificates curl gcc git libc6-dev valgrind moreutils
+    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly
   test_script:
     - . $HOME/.cargo/env
     - set -ex
-    # doctests on Valgrind are very slow
-    - ./tools/test.sh -vv --tests
+    - ./tools/test.sh -vv 2>&1 | ts -i '%.s  '
     # +lse
     # As of Valgrind 3.19, Valgrind supports atomic instructions of ARMv8.0 and ARMv8.1 (FEAT_LSE).
-    - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse" ./tools/test.sh -vv --tests
+    - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse" ./tools/test.sh -vv 2>&1 | ts -i '%.s  '
