--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,6 +22,7 @@ aarch64_linux_test_task:
     - set -ex
     - lscpu
     - rustup toolchain add nightly --no-self-update && rustup default nightly
+    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
   test_script:
     - set -ex
     - ./tools/test.sh -vv
@@ -44,7 +45,7 @@ armhf_linux_test_task:
     - lscpu
     - rustup toolchain add nightly --no-self-update && rustup default nightly
     - dpkg --add-architecture armhf
-    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends gcc-arm-linux-gnueabihf libc6-dev-armhf-cross libc6:armhf
+    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends gcc-arm-linux-gnueabihf libc6-dev-armhf-cross libc6:armhf moreutils
   test_script:
     - set -ex
     - export CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc
@@ -60,6 +61,7 @@ aarch64_macos_test_task:
   setup_script:
     - set -ex
     - sysctl hw.optional machdep.cpu
+    - brew install moreutils
     - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly
   test_script:
     - . $HOME/.cargo/env
@@ -83,7 +85,7 @@ aarch64_linux_valgrind_task:
   test_script:
     - . $HOME/.cargo/env
     - set -ex
-    - ./tools/test.sh -vv 2>&1 | ts -i '%.s  '
+    - ./tools/test.sh -vv
     # +lse
     # As of Valgrind 3.19, Valgrind supports atomic instructions of ARMv8.0 and ARMv8.1 (FEAT_LSE).
-    - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse" ./tools/test.sh -vv 2>&1 | ts -i '%.s  '
+    - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse" ./tools/test.sh -vv
