--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,9 +122,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - run: lscpu
+      - run: |
+          lscpu
+          sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
         if: startsWith(matrix.os, 'ubuntu') || matrix.os == ''
-      - run: sysctl hw.optional machdep.cpu
+      - run: |
+          sysctl hw.optional machdep.cpu
+          brew install moreutils
         if: startsWith(matrix.os, 'macos')
       - name: Install Rust
         run: rustup toolchain add ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
@@ -236,9 +240,9 @@ jobs:
         run: rustup toolchain add nightly --no-self-update && rustup default nightly
       - run: sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
       - uses: taiki-e/install-action@valgrind
-      - run: tools/test.sh -vv 2>&1 | ts -i '%.s  '
+      - run: tools/test.sh -vv
       # +cmpxchg16b
-      - run: tools/test.sh -vv 2>&1 | ts -i '%.s  '
+      - run: tools/test.sh -vv
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+cmpxchg16b
           RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+cmpxchg16b
