--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,9 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-          - rust: nightly
-            target: aarch64_be-unknown-linux-gnu
+          # TODO: core_simd bug https://github.com/rust-lang/portable-simd/pull/348
+          # - rust: nightly
+          #   target: aarch64_be-unknown-linux-gnu
           - rust: stable
             target: arm-unknown-linux-gnueabi
           - rust: nightly
