--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,11 +105,11 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: i686-unknown-linux-gnu
-          - rust: nightly-2023-07-04 # TODO: LLVM bug: Undefined temporary symbol error when building std.
+          - rust: nightly
             target: mips-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mips-unknown-linux-gnu
-          - rust: nightly-2023-07-04 # TODO: LLVM bug: Undefined temporary symbol error when building std.
+          - rust: nightly
             target: mipsel-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use asm_experimental_arch on this target)
             target: mipsel-unknown-linux-gnu
@@ -239,6 +239,10 @@ jobs:
         if: startsWith(matrix.target, 's390x')
 
       - run: cargo minimal-versions build -vvv --workspace --all-features --ignore-private $TARGET $BUILD_STD
+        # TODO: LLVM bug: Undefined temporary symbol error when building std.
+        if: matrix.target != 'mips-unknown-linux-gnu' && matrix.target != 'mipsel-unknown-linux-gnu'
+      - run: cargo minimal-versions build -vvv --release --workspace --all-features --ignore-private $TARGET $BUILD_STD
+        if: matrix.target == 'mips-unknown-linux-gnu' || matrix.target == 'mipsel-unknown-linux-gnu'
 
   build:
     needs: tidy
